integration_tests/tests/compile/fail_ulogdata_enum.rs
use yule_log::ULogData;

#[derive(ULogData)]
pub enum NotAStruct {
    A,
    B,
}

fn main() {}
